# related-ontologies

./: README.md  pyproject.toml  requirements.txt  setup.py
src/related-ontologies/: __init__.py  related.py
src/related_ontologies/: related.py
tests/: test.py
