[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "related-ontologies"
version = "0.0.2"
authors = [
  { name="Justin Xu", email="justin13601@hotmail.com" },
]
description = "A package to generate related clinical ontologies (LOINC, SNOMED-CT)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/justin13601/related-ontologies"
"Bug Tracker" = "https://github.com/justin13601/related-ontologies/issues"
